[package]
name = "codewars-rs"
version = "0.1.0"
edition = "2018"
description = "codewars's solutions in rust"
readme = "https://github.com/oliverdding/codewars-rs/blob/main/README.md"
homepage = "https://github.com/oliverdding/codewars-rs"
repository = "https://github.com/oliverdding/codewars-rs.git"
license = "MIT"
keywords = ["accessibility", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
